// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package datacommons.v1;

option go_package = "github.com/datacommonsorg/mixer/internal/proto/v1";

// Cursor represents the position of a data source.
message Cursor {
  // The index of the import group, starts from 0. Used for Bigtable.
  int32 import_group = 1;
  // The index of the page, starts from 0. Used for Bigtable.
  int32 page = 2;
  // The position of the next read item in the current page, starts from 0. 
  // Used for Bigtable.
  int32 item = 3;
  // The id of the cursor. Used for Spanner.
  string id = 4;
}

// Represents cursors of multiple entities.
message CursorGroup {
  // Entity DCID or other information that identifies the CursorGroup.
  repeated string keys = 1;
  repeated Cursor cursors = 2;
}

// Represents the cursor information of one pagination request.
// Each cursor group corresponds to the cursor information of one entity.
message PaginationInfo {
  repeated CursorGroup cursor_groups = 1;
  PaginationInfo remote_pagination_info = 2;
}